--- a/.github/workflows/anchore.yml
+++ b/.github/workflows/anchore.yml
@@ -37,12 +37,11 @@ jobs:
       run: docker build . --file Dockerfile --tag localbuild/testimage:latest
     - name: Run the Anchore Grype scan action
       #uses: anchore/scan-action@3578976016e97642035dd9a0be842060e62422c6
-      uses: anchore/scan-action@27fa611cf4666754dd6dc0871eeca87c8db834e8
+      uses: anchore/scan-action@v3
       id: scan
       with:
         image: "localbuild/testimage:latest"
-        fail-build: true
-        severity-cutoff: critical
+        fail-build: false
     - name: Upload vulnerability report
       uses: github/codeql-action/upload-sarif@v2
       with:
