--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,7 +43,7 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: sigstore/cosign-installer@main
         with:
-          cosign-release: 'v2.8.1'
+          cosign-release: 'v2.0.0-rc.0'
 
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
